# aoc2025

./: Cargo.toml
aoc-utils/: Cargo.toml
aoc-utils/src/: lib.rs  range.rs  testing.rs  utils.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
