[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-utils = { path = "./aoc-utils" }

[features]
default = []
more-debug = []
extra-debug-prints = ["more-debug"]
draw-visuals = ["more-debug"]

[workspace]
members = ["aoc-utils"]
exclude = ["target/aoc/aoc-autobuild", "target/aoc/aoc-autobench"]
